...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:showDividers="end"
    tools:context=".view.edit.InputFragment">

    <LinearLayout
        android:id="@+id/scheduleTypeRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleEveryweek"
...
            android:tag="@string/schedule_month"
            android:textColor="@color/toggle_button_text_scheduletype"
            android:textOff="@string/everymonth"
            android:textOn="@string/everymonth" />

        <ToggleButton
            android:id="@+id/toggleNumOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_scheduletype"
            android:checked="false"
            android:clickable="false"
...
